# cc-summarize

./: .env.example  .gitignore  CLAUDE.md  README.md  cc_summarize.py  pyproject.toml
src/: __init__.py  cache.py  config.py  date_parser.py  no_ai_summarizer.py  parser.py  sdk_summarizer.py  session_finder.py  summarizer.py  timing.py
src/cli/: __init__.py  summary_gen.py  validation.py
src/formatters/: __init__.py  base.py  jsonl.py  markdown.py  plain.py  terminal.py
src/utils/: __init__.py  content.py  formatting.py  timestamp.py  tools.py
tests/: __init__.py  conftest.py
tests/test_utils/: test_content.py  test_formatting.py  test_timestamp.py
