[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[project]
name = "cc-summarize"
version = "1.0.0"
description = "A tool for managing, viewing, and summarizing Claude Code sessions"
authors = [
    {name = "Claude Code User"}
]
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.35.0",
    "claude-code-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "anyio>=4.0.0",
]

[project.scripts]
cc-summarize = "cc_summarize:main"

[tool.setuptools]
py-modules = ["cc_summarize"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]